# kookbot_rs

./: .gitignore  Cargo.toml  README.md  config.example.toml  config.toml
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  models.rs  playlist.rs  preloader.rs  queue.rs  utils.rs  voice.rs
src/api/: client.rs  mod.rs
src/audio/: decoder.rs  encoder.rs  ffmpeg_encoder.rs  ffmpeg_streamer.rs  mod.rs  rtp.rs  silence.rs  streamer.rs  utils.rs
src/bot/: bilibili.rs  commands.rs  help.rs  lyric.rs  mod.rs  music.rs  playback.rs  qqmusic.rs  search.rs  status.rs  streaming.rs  voice.rs  wyylogin.rs
src/common/: backend.rs  cache.rs  card.rs  console.rs  logging.rs  mod.rs  models.rs  play_state.rs  utils.rs
src/core/: config.rs  error.rs  mod.rs
src/gateway/: client.rs  events.rs  heartbeat.rs  mod.rs  protocol.rs
src/music/: bilibili.rs  downloader.rs  mod.rs  netease.rs  qqmusic.rs
src/music_api/: downloader.rs  mod.rs  netease.rs
src/player/: manager.rs  mod.rs  playlist.rs  preloader.rs  queue.rs
src/webhook/: decrypt.rs  handler.rs  mod.rs  server.rs  verifier.rs
tests/: integration_test.rs
