[package]
name = "kook-music-bot"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Kook Bot (RKM) - 用 Rust 编写的 Kook 机器人框架，支持模块化扩展"
rust-version = "1.93"

[dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# 音频解码 - 支持 MP3, FLAC, WAV 等
symphonia = { version = "0.5.4", features = ["mp3"] }

# HTTP 客户端 - 用于 Kook API
reqwest = { version = "0.13", features = ["json", "multipart", "stream", "rustls", "query"] }

# WebSocket 客户端 - 用于 Kook 实时事件
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"

# 压缩支持
flate2 = "1.0"

# Webhook HTTP 服务器
axum = { version = "0.8", features = ["tokio", "macros"] }

# Webhook 签名验证
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

# JSON 处理
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
owo-colors = "4.0"

# 错误处理
anyhow = "1"
thiserror = "2"

# 异步 trait
async-trait = "0.1"

# 配置管理
toml = "0.9.8"
dirs = "6.0"

# 时间和日期
chrono = { version = "0.4", features = ["serde"] }

# 随机播放
rand = "0.10"

# 正则表达式
regex = "1.10"

# 二维码生成
qrcode = "0.14"
image = "0.25"
unicode-width = "0.2.2"

[[bin]]
name = "kookbot"
path = "src/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
incremental = true
